--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
+  "displayName": "eQ3 Bluetooth - Homekit Control",
+  "name": "homebridge-eq3bhomekit",
   "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
+  "description": "eQ3 Bluetooth thermostat controller plugin for Homebridge",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git://github.com/MarvinSMX/homebridge-eq3bhomekit.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/MarvinSMX/homebridge-eq3bhomekit/issues"
   },
   "engines": {
-    "node": ">=14.18.1",
-    "homebridge": ">=1.3.5"
+    "node": ">=16.13.0",
+    "homebridge": ">=1.3.8"
   },
   "main": "dist/index.js",
   "scripts": {
